Correct description syntax error

--- a/content/notes/milestones-guidelines-continued.mdx
+++ b/content/notes/milestones-guidelines-continued.mdx
@@ -1,6 +1,6 @@
 ---
 date: 2022-08-24
-description: Part II: personal guidelines for commiting to, and respecting, milestones
+description: "Part II: personal guidelines for commiting to, and respecting, milestones"
 title: "Milestone size continued"
 ---
 
@@ -38,8 +38,6 @@ _Note: the two things are not mutually exclusive, but comparison is useful._
 
 - ### against the milestone ending when all tasks are done
   Too much leniency on time. Harder for new issues to wait for the next milestone.
-
----
 
 This is annotation of the following draft protocol, I recognise it is nothing new, it is just me noting it down in my own words having gone "round the houses" to arrive at a familiar conclusion.
 
