Fix markdown typo

--- a/content/notes/milestones-guidelines-continued.mdx
+++ b/content/notes/milestones-guidelines-continued.mdx
@@ -6,7 +6,7 @@ title: "Milestone size continued"
 
 If you're looking for the previous "Milestone" I guess it was [the note about thrashing](https://www.laurencelord.co.uk/notes/milestones-guidelines). Clearly I'm on a the-power-of-baby-steps theme recently.
 
-As I write this (and the previous note) I'm remembering [Sandro](https://www.codurance.com/publications/author/sandro-mancuso's words on [minimum valuable increment](https://www.codurance.com/publications/2020/01/27/minimum-valuable-increment). The description is not the same as what I'm toying with here, but the sentiment is related. Sandro describes how to use it like a template. He's clearly given it a lot of thought and includes being ready to measure the value as a first class attribute. My thinking marries-up with it in practice; make your increments as small as possible in order to bank the value of your work as early as possible.
+As I write this (and the previous note) I'm remembering [Sandro](https://www.codurance.com/publications/author/sandro-mancuso)'s words on [minimum valuable increment](https://www.codurance.com/publications/2020/01/27/minimum-valuable-increment). The description is not the same as what I'm toying with here, but the sentiment is related. Sandro describes how to use it like a template. He's clearly given it a lot of thought and includes being ready to measure the value as a first class attribute. My thinking marries-up with it in practice; make your increments as small as possible in order to bank the value of your work as early as possible.
 
 This makes so much sense in so many ways. For me, just recently it is an antidote to the waste that can result from interrupting a workflow part way through a step. If the step is too large the chance and the cost of interruptions are both higher.
 
