Add first draft on DC5B Described

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -9,7 +9,7 @@ title: "I googled three names I use (LL782, dog5b and DC5B.) Of fifty-three acco
   sharing it here so I don't loose it
 </aside>
 
-## 268 characters for each one
+## 80-180 characters for each one
 
 1. **[DC5B Described](#dc5b-described)** Two way feedback on DC5B activity
 1. **[DC5B Teemill](#dc5b-teemill)** Trade T-shirts for cash
@@ -37,7 +37,7 @@ title: "I googled three names I use (LL782, dog5b and DC5B.) Of fifty-three acco
 
 **URL:** [https://dc5b.dog/](https://dc5b.dog/)
 
-TODO
+Welcome to the blog about DC5B. Find out about the business and the products we're developing. Go behind the scenes, ask any questions you might have and turn your ideas into art.
 
 ### DC5B Teemill
 
