Add Teemill description

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -45,7 +45,13 @@ Welcome to the blog about DC5B. Find out about the business and the products we'
 
 **URL:** [https://dc5b.teemill.com/](https://dc5b.teemill.com/)
 
-TODO
+#### DC5B Teemill is...
+
+Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. They print our products on demand and we love their environmental credentials
+
+#### Search result description
+
+Trade your cash for t-shirts, sweaters, art prints and jigsaws down at the old teemill. DC5B collaborate with Teemill because of their fantastic environmental creds and their convenient print on demand products.
 
 ### dog5b Blog
 
