Update format of profile texts

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -35,7 +35,13 @@ title: "I googled three names I use (LL782, dog5b and DC5B.) Of fifty-three acco
 
 **Two way feedback on DC5B activity**
 
-**URL:** [https://dc5b.dog/](https://dc5b.dog/)
+[https://dc5b.dog/](https://dc5b.dog/)
+
+#### DC5B Described is...
+
+A blog for going into detail about the products and ideas we produce. We also share information about the business itself, and invite questions and comments on all of it.
+
+#### Search result description
 
 Welcome to the blog about DC5B. Find out about the business and the products we're developing. Go behind the scenes, ask any questions you might have and turn your ideas into art.
 
@@ -43,7 +49,7 @@ Welcome to the blog about DC5B. Find out about the business and the products we'
 
 **Trade T-shirts for cash**
 
-**URL:** [https://dc5b.teemill.com/](https://dc5b.teemill.com/)
+[https://dc5b.teemill.com/](https://dc5b.teemill.com/)
 
 #### DC5B Teemill is...
 
@@ -57,7 +63,13 @@ Trade your cash for t-shirts, sweaters, art prints and jigsaws down at the old t
 
 **Artistic expression**
 
-**URL:** [https://dog.dc5b.com/](https://dog.dc5b.com/)
+[https://dog.dc5b.com/](https://dog.dc5b.com/)
+
+#### dog5b Blog is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -65,7 +77,13 @@ TODO
 
 **Represent my working profile**
 
-**URL:** [https://github.com/LL782](https://github.com/LL782)
+[https://github.com/LL782](https://github.com/LL782)
+
+#### LL782 GitHub is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -73,7 +91,13 @@ TODO
 
 **Engage in contemporary discourse**
 
-**URL:** [https://twitter.com/ll782](https://twitter.com/ll782)
+[https://twitter.com/ll782](https://twitter.com/ll782)
+
+#### LL782 Twitter is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -81,7 +105,13 @@ TODO
 
 **Details for professional collaboration **
 
-**URL:** [https://www.codurance.com/about-us/our-people/](https://www.codurance.com/about-us/our-people/)
+[https://www.codurance.com/about-us/our-people/](https://www.codurance.com/about-us/our-people/)
+
+#### LL782 Codurance is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -89,7 +119,13 @@ TODO
 
 **Showcase the business **
 
-**URL:** [https://www.dc5b.com](https://www.dc5b.com)
+[https://www.dc5b.com](https://www.dc5b.com)
+
+#### DC5B Website is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -97,7 +133,13 @@ TODO
 
 **Facebook connections**
 
-**URL:** [https://www.facebook.com/LL782](https://www.facebook.com/LL782)
+[https://www.facebook.com/LL782](https://www.facebook.com/LL782)
+
+#### LL782 Facebook is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -105,7 +147,13 @@ TODO
 
 **Reach customers as an artist**
 
-**URL:** [https://www.instagram.com/dog.dc5b](https://www.instagram.com/dog.dc5b)
+[https://www.instagram.com/dog.dc5b](https://www.instagram.com/dog.dc5b)
+
+#### dog5b Instagram is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -113,7 +161,13 @@ TODO
 
 **Share photos with friends**
 
-**URL:** [https://www.instagram.com/ll782](https://www.instagram.com/ll782)
+[https://www.instagram.com/ll782](https://www.instagram.com/ll782)
+
+#### LL782 Instagram is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -121,7 +175,13 @@ TODO
 
 **A personal exposé**
 
-**URL:** [https://www.laurencelord.co.uk](https://www.laurencelord.co.uk)
+[https://www.laurencelord.co.uk](https://www.laurencelord.co.uk)
+
+#### LL782 Website is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -129,7 +189,13 @@ TODO
 
 **Network professionally**
 
-**URL:** [https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
+[https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
+
+#### LL782 LinkedIn is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -137,7 +203,13 @@ TODO
 
 **Trade details for funds**
 
-**URL:** [https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
+[https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
+
+#### DC5B Patreon is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -145,7 +217,13 @@ TODO
 
 **In case I start doing TV**
 
-**URL:** [https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
+[https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
+
+#### LL782 YouTube is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -153,7 +231,13 @@ TODO
 
 **Engage with other creators **
 
-**URL:** [https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
+[https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
+
+#### dog5b Tumblr is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -161,15 +245,24 @@ TODO
 
 **Global profile summary**
 
-**URL:** [https://en.gravatar.com/ll782](https://en.gravatar.com/ll782)
+[https://en.gravatar.com/ll782](https://en.gravatar.com/ll782)
+
+#### LL782 Gravatar is...
+
+TODO
+
+#### Search result description
 
 TODO
 
 ### DC5B Instagram
 
+# is...
+
+TODO
 **Reach customers with ideas and products**
 
-**URL:** [TODO](TODO)
+#### Search result description
 
 TODO
 
@@ -177,7 +270,13 @@ TODO
 
 **Develop ideas into products**
 
-**URL:** [https://idea.dc5b.com](https://idea.dc5b.com)
+[https://idea.dc5b.com](https://idea.dc5b.com)
+
+#### DC5B Ideas is...
+
+TODO
+
+#### Search result description
 
 TODO
 
@@ -185,6 +284,12 @@ TODO
 
 **Appearance on Google products**
 
-**URL:** [https://myaccount.google.com/u/1/personal-info?hl=en](https://myaccount.google.com/u/1/personal-info?hl=en)
+[https://myaccount.google.com/u/1/personal-info?hl=en](https://myaccount.google.com/u/1/personal-info?hl=en)
+
+#### LL782 Google is...
+
+TODO
+
+#### Search result description
 
 TODO
