Keep drafting profile descriptions

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -67,11 +67,7 @@ Trade your cash for t-shirts, sweaters, art prints and jigsaws down at the old t
 
 #### dog5b Blog is...
 
-TODO
-
-#### Search result description
-
-TODO
+My personal blog under my artist pseudonym "dog5b". It's pretty free and unscripted, giving me a personal, artistic space, away from the more commercial ideas development of DC5B.
 
 ### LL782 GitHub
 
@@ -81,11 +77,7 @@ TODO
 
 #### LL782 GitHub is...
 
-TODO
-
-#### Search result description
-
-TODO
+My personal profile on GitHub. Here you'll find links to my work as a developer, including source code and project management for my art development business – DC5B.
 
 ### LL782 Twitter
 
@@ -95,11 +87,7 @@ TODO
 
 #### LL782 Twitter is...
 
-TODO
-
-#### Search result description
-
-TODO
+A place to engage in public discourse. Truth is I haven't made a habit of it. I mostly use Twitter to present my interests and note things I don't want to forget.
 
 ### LL782 Codurance
 
@@ -109,11 +97,7 @@ TODO
 
 #### LL782 Codurance is...
 
-TODO
-
-#### Search result description
-
-TODO
+My professional profile. My introduction to colleagues, clients and collaborators. A facet of my profile focused on my work as a software craftsperson and business consultant.
 
 ### DC5B Website
 
@@ -123,11 +107,7 @@ TODO
 
 #### DC5B Website is...
 
-TODO
-
-#### Search result description
-
-TODO
+The gateway of DC5B with doors to the idea development shop and [potentially] links to our social media pages, our blog and some in depth text about the organisation.
 
 ### LL782 Facebook
 
@@ -137,11 +117,7 @@ TODO
 
 #### LL782 Facebook is...
 
-TODO
-
-#### Search result description
-
-TODO
+A collection of photos and data about my personal life, together with campaigns I've supported. It is a way to stay in touch with people I don't connect with in other ways online.
 
 ### dog5b Instagram
 
@@ -151,11 +127,7 @@ TODO
 
 #### dog5b Instagram is...
 
-TODO
-
-#### Search result description
-
-TODO
+Somewhere I share my drawings with a global public. I get a certain amount of feedback on which drawings are most popular and can potentially reach some fans with updates and news.
 
 ### LL782 Instagram
 
@@ -165,11 +137,7 @@ TODO
 
 #### LL782 Instagram is...
 
-TODO
-
-#### Search result description
-
-TODO
+A semi-public place where we get a little bit creative sharing photos from our personal lives. It's a pleasant place for me to swap messages with friends.
 
 ### LL782 Website
 
@@ -179,11 +147,7 @@ TODO
 
 #### LL782 Website is...
 
-TODO
-
-#### Search result description
-
-TODO
+My personal website where I keep some notes about what I'm working on and thinking about. From here I link to my other projects.
 
 ### LL782 LinkedIn
 
@@ -193,11 +157,7 @@ TODO
 
 #### LL782 LinkedIn is...
 
-TODO
-
-#### Search result description
-
-TODO
+A place for professional networking. I present my work profile, keep a record of past jobs and stay in touch with work colleagues, collaborators and supporters.
 
 ### DC5B Patreon
 
@@ -207,39 +167,27 @@ TODO
 
 #### DC5B Patreon is...
 
-TODO
-
-#### Search result description
-
-TODO
+A platform for supporters who choose to send me some funds on a regular basis. They get access to all sorts of detail on what I'm doing and can unlock exclusive rewards tailored to them.
 
 ### LL782 YouTube
 
-**In case I start doing TV**
+**Videos I appreciate and the future home of my videos**
 
 [https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
 
 #### LL782 YouTube is...
 
-TODO
-
-#### Search result description
-
-TODO
+For my animations and video based artwork. I also collect playlists of videos I think are interesting.
 
 ### dog5b Tumblr
 
-**Engage with other creators **
+**Engage with other creators**
 
 [https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
 
 #### dog5b Tumblr is...
 
-TODO
-
-#### Search result description
-
-TODO
+A place to discuss artwork that I find inspirational.
 
 ### LL782 Gravatar
 
@@ -249,22 +197,15 @@ TODO
 
 #### LL782 Gravatar is...
 
-TODO
-
-#### Search result description
-
-TODO
+A convenient way to update my public profile in a single place.
 
 ### DC5B Instagram
 
-# is...
-
-TODO
 **Reach customers with ideas and products**
 
-#### Search result description
+#### DC5B Instagram is...
 
-TODO
+An outlet for DC5B ideas where we can chat about what we're working on and promote the latest products and brand developments.
 
 ### DC5B Ideas
 
@@ -274,11 +215,7 @@ TODO
 
 #### DC5B Ideas is...
 
-TODO
-
-#### Search result description
-
-TODO
+This is a listing of all the raw ideas and finished products where people can search for what interests them and find further information on customisation or purchase.
 
 ### LL782 Google
 
@@ -288,8 +225,4 @@ TODO
 
 #### LL782 Google is...
 
-TODO
-
-#### Search result description
-
-TODO
+Simply a profile for my personal account on Google products like YouTube, Gmail and Calendar.
