--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2022-11-06
 description: This note is part of work I'm doing to curate my personal public profile. I'm sharing it here so I don't loose it.
-title: "I googled three names I use (LL782, dog5b and DC5B.) Of fifty-three accounts, I'm fine with sixteen, will close five, ignore three and update the other twenty-nine. My next task is describing the nineteen that I'm updating as a priority. #noteToSelf #profileAdmin #biz "
+title: "I googled three names I use (LL782, dog5b and DC5B) Of the fifty-three accounts I'm fine with sixteen and will close five, ignore three and update the other twenty-nine. My next task is describing the nineteen that I'm updating as a priority."
 ---
 
 <aside>
