Simplify the profile listings

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -31,21 +31,13 @@ title: "I googled three names I use (LL782, dog5b and DC5B) Of the fifty-three a
 1. **[DC5B Ideas](#dc5b-ideas)** Develop ideas into products
 1. **[LL782 Google](#ll782-google)** Appearance on Google products
 
----
-
 <a id="dc5b-described" name="dc5b-described" />
 
-### DC5B Described
-
-**Two way feedback on DC5B activity**
-
-[https://dc5b.dog/](https://dc5b.dog/)
-
----
-
-#### DC5B Described is...
+### DC5B Described is...
 
 A blog for going into detail about the products and ideas we produce. We also share information about the business itself, and invite questions and comments on all of it.
+
+[https://dc5b.dog/](https://dc5b.dog/)
 
 ---
 
@@ -53,21 +45,13 @@ A blog for going into detail about the products and ideas we produce. We also sh
 
 Welcome to the blog about DC5B. Find out about the business and the products we're developing. Go behind the scenes, ask any questions you might have and turn your ideas into art.
 
----
-
 <a id="dc5b-teemill" name="dc5b-teemill" />
 
-### DC5B Teemill
-
-**Trade T-shirts for cash**
-
-[https://dc5b.teemill.com/](https://dc5b.teemill.com/)
-
----
-
-#### DC5B Teemill is...
+### DC5B Teemill is...
 
 Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. They print our products on demand and we love their environmental credentials
+
+[https://dc5b.teemill.com/](https://dc5b.teemill.com/)
 
 ---
 
@@ -75,272 +59,136 @@ Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints a
 
 Trade your cash for t-shirts, sweaters, art prints and jigsaws down at the old teemill. DC5B collaborate with Teemill because of their fantastic environmental creds and their convenient print on demand products.
 
----
-
 <a id="dog5b-blog" name="dog5b-blog" />
 
-### dog5b Blog
-
-**Artistic expression**
-
-[https://dog.dc5b.com/](https://dog.dc5b.com/)
-
----
-
-#### dog5b Blog is...
+### dog5b Blog is...
 
 My personal blog under my artist pseudonym "dog5b". It's pretty free and unscripted, giving me a personal, artistic space, away from the more commercial ideas development of DC5B.
 
----
+[https://dog.dc5b.com/](https://dog.dc5b.com/)
 
 <a id="ll782-github" name="ll782-github" />
 
-### LL782 GitHub
-
-**Represent my working profile**
-
-[https://github.com/LL782](https://github.com/LL782)
-
----
-
-#### LL782 GitHub is...
+### LL782 GitHub is...
 
 My personal profile on GitHub. Here you'll find links to my work as a developer, including source code and project management for my art development business – DC5B.
 
----
+[https://github.com/LL782](https://github.com/LL782)
 
 <a id="ll782-twitter" name="ll782-twitter" />
 
-### LL782 Twitter
-
-**Engage in contemporary discourse**
-
-[https://twitter.com/ll782](https://twitter.com/ll782)
-
----
-
-#### LL782 Twitter is...
+### LL782 Twitter is...
 
 A place to engage in public discourse. Truth is I haven't made a habit of it. I mostly use Twitter to present my interests and note things I don't want to forget.
 
----
+[https://twitter.com/ll782](https://twitter.com/ll782)
 
 <a id="ll782-codurance" name="ll782-codurance" />
 
-### LL782 Codurance
-
-**Details for professional collaboration **
-
-[https://www.codurance.com/about-us/our-people/](https://www.codurance.com/about-us/our-people/)
-
----
-
-#### LL782 Codurance is...
+### LL782 Codurance is...
 
 My professional profile. My introduction to colleagues, clients and collaborators. A facet of my profile focused on my work as a software craftsperson and business consultant.
 
----
+[https://www.codurance.com/about-us/our-people/](https://www.codurance.com/about-us/our-people/)
 
 <a id="dc5b-website" name="dc5b-website" />
 
-### DC5B Website
-
-**Showcase the business **
-
-[https://www.dc5b.com](https://www.dc5b.com)
-
----
-
-#### DC5B Website is...
+### DC5B Website is...
 
 The gateway of DC5B with doors to the idea development shop and [potentially] links to our social media pages, our blog and some in depth text about the organisation.
 
----
+[https://www.dc5b.com](https://www.dc5b.com)
 
 <a id="ll782-facebook" name="ll782-facebook" />
 
-### LL782 Facebook
-
-**Facebook connections**
-
-[https://www.facebook.com/LL782](https://www.facebook.com/LL782)
-
----
-
-#### LL782 Facebook is...
+### LL782 Facebook is...
 
 A collection of photos and data about my personal life, together with campaigns I've supported. It is a way to stay in touch with people I don't connect with in other ways online.
 
----
+[https://www.facebook.com/LL782](https://www.facebook.com/LL782)
 
 <a id="dog5b-instagram" name="dog5b-instagram" />
 
-### dog5b Instagram
-
-**Reach customers as an artist**
-
-[https://www.instagram.com/dog.dc5b](https://www.instagram.com/dog.dc5b)
-
----
-
-#### dog5b Instagram is...
+### dog5b Instagram is...
 
 Somewhere I share my drawings with a global public. I get a certain amount of feedback on which drawings are most popular and can potentially reach some fans with updates and news.
 
----
+[https://www.instagram.com/dog.dc5b](https://www.instagram.com/dog.dc5b)
 
 <a id="ll782-instagram" name="ll782-instagram" />
 
-### LL782 Instagram
-
-**Share photos with friends**
-
-[https://www.instagram.com/ll782](https://www.instagram.com/ll782)
-
----
-
-#### LL782 Instagram is...
+### LL782 Instagram is...
 
 A semi-public place where we get a little bit creative sharing photos from our personal lives. It's a pleasant place for me to swap messages with friends.
 
----
+[https://www.instagram.com/ll782](https://www.instagram.com/ll782)
 
 <a id="ll782-website" name="ll782-website" />
 
-### LL782 Website
-
-**A personal exposé**
-
-[https://www.laurencelord.co.uk](https://www.laurencelord.co.uk)
-
----
-
-#### LL782 Website is...
+### LL782 Website is...
 
 My personal website where I keep some notes about what I'm working on and thinking about. From here I link to my other projects.
 
----
+[https://www.laurencelord.co.uk](https://www.laurencelord.co.uk)
 
 <a id="ll782-linkedin" name="ll782-linkedin" />
 
-### LL782 LinkedIn
-
-**Network professionally**
-
-[https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
-
----
-
-#### LL782 LinkedIn is...
+### LL782 LinkedIn is...
 
 A place for professional networking. I present my work profile, keep a record of past jobs and stay in touch with work colleagues, collaborators and supporters.
 
----
+[https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
 
 <a id="dc5b-patreon" name="dc5b-patreon" />
 
-### DC5B Patreon
-
-**Trade details for funds**
-
-[https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
-
----
-
-#### DC5B Patreon is...
+### DC5B Patreon is...
 
 A platform for supporters who choose to send me some funds on a regular basis. They get access to all sorts of detail on what I'm doing and can unlock exclusive rewards tailored to them.
 
----
+[https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
 
 <a id="ll782-youtube" name="ll782-youtube" />
 
-### LL782 YouTube
-
-**Videos I appreciate and the future home of my videos**
-
-[https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
-
----
-
-#### LL782 YouTube is...
+### LL782 YouTube is...
 
 For my animations and video based artwork. I also collect playlists of videos I think are interesting.
 
----
+[https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
 
 <a id="dog5b-tumblr" name="dog5b-tumblr" />
 
-### dog5b Tumblr
-
-**Engage with other creators**
-
-[https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
-
----
-
-#### dog5b Tumblr is...
+### dog5b Tumblr is...
 
 A place to discuss artwork that I find inspirational.
 
----
+[https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
 
 <a id="ll782-gravatar" name="ll782-gravatar" />
 
-### LL782 Gravatar
-
-**Global profile summary**
-
-[https://en.gravatar.com/ll782](https://en.gravatar.com/ll782)
-
----
-
-#### LL782 Gravatar is...
+### LL782 Gravatar is...
 
 A convenient way to update my public profile in a single place.
 
----
+[https://en.gravatar.com/ll782](https://en.gravatar.com/ll782)
 
 <a id="dc5b-instagram" name="dc5b-instagram" />
 
-### DC5B Instagram
+### DC5B Instagram is...
 
 **Reach customers with ideas and products**
 
----
-
-#### DC5B Instagram is...
-
-An outlet for DC5B ideas where we can chat about what we're working on and promote the latest products and brand developments.
-
----
-
 <a id="dc5b-ideas" name="dc5b-ideas" />
 
-### DC5B Ideas
-
-**Develop ideas into products**
-
-[https://idea.dc5b.com](https://idea.dc5b.com)
-
----
-
-#### DC5B Ideas is...
+### DC5B Ideas is...
 
 This is a listing of all the raw ideas and finished products where people can search for what interests them and find further information on customisation or purchase.
 
----
+[https://idea.dc5b.com](https://idea.dc5b.com)
 
 <a id="ll782-google" name="ll782-google" />
 
-### LL782 Google
-
-**Appearance on Google products**
-
-[https://myaccount.google.com/u/1/personal-info?hl=en](https://myaccount.google.com/u/1/personal-info?hl=en)
-
----
-
-#### LL782 Google is...
+### LL782 Google is...
 
 Simply a profile for my personal account on Google products like YouTube, Gmail and Calendar.
+
+[https://myaccount.google.com/u/1/personal-info?hl=en](https://myaccount.google.com/u/1/personal-info?hl=en)
