Remove search descriptions

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -39,25 +39,13 @@ A blog for going into detail about the products and ideas we produce. We also sh
 
 [https://dc5b.dog/](https://dc5b.dog/)
 
----
-
-#### Search result description
-
-Welcome to the blog about DC5B. Find out about the business and the products we're developing. Go behind the scenes, ask any questions you might have and turn your ideas into art.
-
 <a id="dc5b-teemill" name="dc5b-teemill" />
 
 ### DC5B Teemill is...
 
-Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. They print our products on demand and we love their environmental credentials
+Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. They print our products on demand and we love their environmental credentials.
 
 [https://dc5b.teemill.com/](https://dc5b.teemill.com/)
-
----
-
-#### Search result description
-
-Trade your cash for t-shirts, sweaters, art prints and jigsaws down at the old teemill. DC5B collaborate with Teemill because of their fantastic environmental creds and their convenient print on demand products.
 
 <a id="dog5b-blog" name="dog5b-blog" />
 
