Mention Teemill directly

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -43,7 +43,7 @@ A blog for going into detail about the products and ideas we produce. We also sh
 
 ### DC5B Teemill is...
 
-Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. They print our products on demand and we love their environmental credentials.
+Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints and jigsaws. Teemill print our products on demand and we love their environmental credentials.
 
 [https://dc5b.teemill.com/](https://dc5b.teemill.com/)
 
