--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -51,7 +51,7 @@ Our online shop for t-shirts, sweaters, shorts, joggers, tote bags, art prints a
 
 ### dog5b Blog is...
 
-My personal blog under my artist pseudonym "dog5b". It's pretty free and unscripted, giving me a personal, artistic space, away from the more commercial ideas development of DC5B.
+My personal blog under my artist pseudonym "dog5b". It's pretty free and unscripted, giving me an artistic space away from the more commercial ideas development of DC5B.
 
 [https://dog.dc5b.com/](https://dog.dc5b.com/)
 
