Further refine profile descriptions

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -59,7 +59,7 @@ My personal blog under my artist pseudonym "dog5b". It's pretty free and unscrip
 
 ### LL782 GitHub is...
 
-My personal profile on GitHub. Here you'll find links to my work as a developer, including source code and project management for my art development business – DC5B.
+My profile on GitHub, where you'll find links to some of my work as a developer, including the open-source code and project management of my art development business – DC5B.
 
 [https://github.com/LL782](https://github.com/LL782)
 
@@ -67,7 +67,7 @@ My personal profile on GitHub. Here you'll find links to my work as a developer,
 
 ### LL782 Twitter is...
 
-A place to engage in public discourse. Truth is I haven't made a habit of it. I mostly use Twitter to present my interests and note things I don't want to forget.
+A place to engage in public discourse. Truth is, I haven't made a habit of that and mostly use Twitter to present my interests, and to note things I don't want to forget.
 
 [https://twitter.com/ll782](https://twitter.com/ll782)
 
@@ -75,7 +75,7 @@ A place to engage in public discourse. Truth is I haven't made a habit of it. I 
 
 ### LL782 Codurance is...
 
-My professional profile. My introduction to colleagues, clients and collaborators. A facet of my profile focused on my work as a software craftsperson and business consultant.
+My professional introduction to colleagues, clients and collaborators at Codurance. A facet of my profile describing my work as a software craftsperson and business consultant.
 
 [https://www.codurance.com/about-us/our-people/](https://www.codurance.com/about-us/our-people/)
 
@@ -83,7 +83,7 @@ My professional profile. My introduction to colleagues, clients and collaborator
 
 ### DC5B Website is...
 
-The gateway of DC5B with doors to the idea development shop and [potentially] links to our social media pages, our blog and some in depth text about the organisation.
+The main DC5B gateway with routes to the idea development shop and [one day,] links to our social media pages, blog and pages about the organisation as a whole.
 
 [https://www.dc5b.com](https://www.dc5b.com)
 
@@ -91,7 +91,7 @@ The gateway of DC5B with doors to the idea development shop and [potentially] li
 
 ### LL782 Facebook is...
 
-A collection of photos and data about my personal life, together with campaigns I've supported. It is a way to stay in touch with people I don't connect with in other ways online.
+Personal photos and data that I've made semi-public, along with campaigns and media I've identified with. A way to stay in touch with people I don't connect with elsewhere online.
 
 [https://www.facebook.com/LL782](https://www.facebook.com/LL782)
 
@@ -99,7 +99,7 @@ A collection of photos and data about my personal life, together with campaigns 
 
 ### dog5b Instagram is...
 
-Somewhere I share my drawings with a global public. I get a certain amount of feedback on which drawings are most popular and can potentially reach some fans with updates and news.
+Somewhere I share my drawings with fans and a global public to engage and get feedback on which one are most popular. It's also an outlet for my art related news and updates.
 
 [https://www.instagram.com/dog.dc5b](https://www.instagram.com/dog.dc5b)
 
@@ -107,7 +107,7 @@ Somewhere I share my drawings with a global public. I get a certain amount of fe
 
 ### LL782 Instagram is...
 
-A semi-public place where we get a little bit creative sharing photos from our personal lives. It's a pleasant place for me to swap messages with friends.
+A semi-public place where I get a little bit creative sharing photos from my life. It's a pleasant place for me to swap messages with friends and here about some new ideas.
 
 [https://www.instagram.com/ll782](https://www.instagram.com/ll782)
 
@@ -115,7 +115,7 @@ A semi-public place where we get a little bit creative sharing photos from our p
 
 ### LL782 Website is...
 
-My personal website where I keep some notes about what I'm working on and thinking about. From here I link to my other projects.
+My personal website where I keep notes (primarily for myself) about what I'm working on and thinking about, and I experiment with web code and software development ideas.
 
 [https://www.laurencelord.co.uk](https://www.laurencelord.co.uk)
 
@@ -123,7 +123,7 @@ My personal website where I keep some notes about what I'm working on and thinki
 
 ### LL782 LinkedIn is...
 
-A place for professional networking. I present my work profile, keep a record of past jobs and stay in touch with work colleagues, collaborators and supporters.
+For professional networking. I present my work profile, past jobs, a very lean portfolio and I stay in touch with work colleagues, collaborators and supporters.
 
 [https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
 
@@ -131,7 +131,7 @@ A place for professional networking. I present my work profile, keep a record of
 
 ### DC5B Patreon is...
 
-A platform for supporters who choose to send me some funds on a regular basis. They get access to all sorts of detail on what I'm doing and can unlock exclusive rewards tailored to them.
+A platform for supporters who choose to send me some funds on a regular basis. They get access to detail of what I'm doing and can unlock exclusive rewards tailored to them.
 
 [https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
 
@@ -139,7 +139,7 @@ A platform for supporters who choose to send me some funds on a regular basis. T
 
 ### LL782 YouTube is...
 
-For my animations and video based artwork. I also collect playlists of videos I think are interesting.
+For my animations and vlogging ambitions. I also collect playlists of videos I recommend watching.
 
 [https://www.youtube.com/c/LaurenceLord](https://www.youtube.com/c/LaurenceLord)
 
@@ -147,7 +147,7 @@ For my animations and video based artwork. I also collect playlists of videos I 
 
 ### dog5b Tumblr is...
 
-A place to discuss artwork that I find inspirational.
+A place to collect and discuss artwork that I have found inspirational.
 
 [https://dog5b.tumblr.com/](https://dog5b.tumblr.com/)
 
@@ -155,7 +155,7 @@ A place to discuss artwork that I find inspirational.
 
 ### LL782 Gravatar is...
 
-A convenient way to update my public profile in a single place.
+A simple web profile that gets shared across all Wordpress and some other websites.
 
 [https://en.gravatar.com/ll782](https://en.gravatar.com/ll782)
 
@@ -165,11 +165,15 @@ A convenient way to update my public profile in a single place.
 
 **Reach customers with ideas and products**
 
+An outlet for images, texts and videos documenting developments at DC5B with a special focus on sharing the ideas we're developing and engaging with feedback.
+
+[TODO](#)
+
 <a id="dc5b-ideas" name="dc5b-ideas" />
 
 ### DC5B Ideas is...
 
-This is a listing of all the raw ideas and finished products where people can search for what interests them and find further information on customisation or purchase.
+A listing of all the raw ideas and finished products developed at DC5B, where people can search for what interests them and find further information on customisation and purchase.
 
 [https://idea.dc5b.com](https://idea.dc5b.com)
 
@@ -177,6 +181,6 @@ This is a listing of all the raw ideas and finished products where people can se
 
 ### LL782 Google is...
 
-Simply a profile for my personal account on Google products like YouTube, Gmail and Calendar.
+Simply a profile for my personal account, showing up with all Google products – like YouTube, Gmail and Calendar.
 
 [https://myaccount.google.com/u/1/personal-info?hl=en](https://myaccount.google.com/u/1/personal-info?hl=en)
