Switch Patreon over to LL782

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -23,7 +23,7 @@ title: "I googled three names I use (LL782, dog5b and DC5B) Of the fifty-three a
 1. **[LL782 Instagram](#ll782-instagram)** Share photos with friends
 1. **[LL782 Website](#ll782-website)** A personal exposé
 1. **[LL782 LinkedIn](#ll782-linkedin)** Network professionally
-1. **[DC5B Patreon](#dc5b-patreon)** Trade details for funds
+1. **[LL782 Patreon](#ll782-patreon)** Trade details for funds
 1. **[LL782 YouTube](#ll782-youtube)** In case I start doing TV
 1. **[dog5b Tumblr](#dog5b-tumblr)** Engage with other creators
 1. **[LL782 Gravatar](#ll782-gravatar)** Global profile summary
@@ -127,13 +127,13 @@ For professional networking. I present my work profile, past jobs, a very lean p
 
 [https://www.linkedin.com/in/laurencelord/](https://www.linkedin.com/in/laurencelord/)
 
-<a id="dc5b-patreon" name="dc5b-patreon" />
+<a id="ll782-patreon" name="ll782-patreon" />
 
-### DC5B Patreon is...
+### LL782 Patreon is...
 
 A platform for supporters who choose to send me some funds on a regular basis. They get access to detail of what I'm doing and can unlock exclusive rewards tailored to them.
 
-[https://www.patreon.com/idea_dc5b](https://www.patreon.com/idea_dc5b)
+[https://www.patreon.com/LL782](https://www.patreon.com/LL782)
 
 <a id="ll782-youtube" name="ll782-youtube" />
 
