Add link to Notion

--- a/content/notes/profile-updates-2022.mdx
+++ b/content/notes/profile-updates-2022.mdx
@@ -4,10 +4,11 @@ description: This note is part of work I'm doing to curate my personal public pr
 title: "I googled three names I use (LL782, dog5b and DC5B) Of the fifty-three accounts I'm fine with sixteen and will close five, ignore three and update the other twenty-nine. My next task is describing the nineteen that I'm updating as a priority."
 ---
 
-<aside>
-  This note is part of work I'm doing to curate my personal public profile. I'm
-  sharing it here so I don't loose it
-</aside>
+This note is part of work I'm doing to curate my personal public profile. 
+I'm sharing it here so I don't loose it.
+
+Also related to **Notion > Pondering > [My Profile – Laurence "DC5B" Lord](https://www.notion.so/My-profile-Laurence-DC5B-Lord-b40505100dc742f49d3ffef4ea7023cf)** (private)
+
 
 ## 80-180 characters for each one
 
